# vpm-oblivius

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  to-do.yaml
migrations/: 20260206_initial.sql  20260227080553_initial.sql  20260304165548_utc_timestamps.sql  20260304_remove_market_base_url.sql  20260304_utc_timestamps.sql
src/: adapters.rs  infra.rs  lib.rs  main.rs
src/adapters/: http.rs  markets.rs  queries.rs  utils.rs
src/adapters/http/: app_error_impl.rs  app_state.rs  bounded.rs  rate_limit.rs  routes.rs
src/adapters/http/routes/: api.rs  packages.rs  panel.rs  public.rs  vpm.rs
src/adapters/http/routes/api/: code.rs  gift.rs  license.rs  markets.rs  packages.rs
src/adapters/markets/: gumroad.rs  jinxxy.rs  payhip.rs
src/adapters/queries/: code.rs  gift.rs  license.rs  market_config.rs  packages.rs
src/adapters/utils/: gift_code.rs  jwt.rs
src/application/: app_error.rs  use_cases.rs
src/application/use_cases/: code.rs  gift.rs  license.rs  packages.rs  redeem.rs
src/domain/: entities.rs  ports.rs  services.rs
src/domain/services/: gift_code.rs  market_credentials.rs  token.rs  uid.rs  zip_manifest.rs
src/infra/: app.rs  config.rs  db.rs  setup.rs
templates/: base.html
templates/panel/: dashboard.html  licenses.html  login.html  markets.html  package_detail.html  packages.html
templates/partials/: app.js  styles.css
templates/public/: landing.html  result.html
