[package]
name = "vpm-oblivius"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
env = "1.0.1"
parse_duration = "2.1.1"
rand = "0.9.2"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.15.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "chrono", "time", "bigdecimal", "json"] }
thiserror = "2.0.18"
time = "0.3.46"
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", featues = ["env-filter", "fmt", "std", "json"] }
uuid = "1.20.0"

[dev-dependencies]
anyhow = "1"
