[package]
name = "vpm-oblivius"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3.31"
governor = "0.8"
http = "1.4.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
parking_lot = "0.12"
parse_duration = "2.1.1"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
smallvec = "1.15.1"
subtle = "2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "chrono", "time", "bigdecimal", "json"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower_governor = "0.6"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "std", "json"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1"
